# stapel-mailtrap

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  admin.py  apps.py  checks.py  conf.py  conftest.py  dto.py  errors.py  models.py  provider.py  pyproject.toml  scope.py  serializers.py  services.py  tasks.py  urls.py  urls_v1.py  views.py
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
management/commands/: purge_trapped_emails.py
migrations/: 0001_initial.py
schemas/emits/: mailtrap.email.trapped.json
tests/: test_api.py  test_command_and_task.py  test_provider.py  test_seams.py  test_services.py  urls.py
