[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-mailtrap"
version = "0.1.0"
description = "Email trap (mail catcher) for the Stapel framework — capture outbound email in dev/staging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "email", "mailtrap", "mailcatcher"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.5,<0.6",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_mailtrap" = "."}
packages = [
    "stapel_mailtrap",
    "stapel_mailtrap.migrations",
    "stapel_mailtrap.management",
    "stapel_mailtrap.management.commands",
    "stapel_mailtrap.tests",
]

[tool.setuptools.package-data]
stapel_mailtrap = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
