[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-mailtrap"
version = "0.1.2"
description = "Email trap (mail catcher) for the Stapel framework — capture outbound email in dev/staging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "email", "mailtrap", "mailcatcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.11",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-mailtrap"
Repository = "https://github.com/usestapel/stapel-mailtrap"
Documentation = "https://github.com/usestapel/stapel-mailtrap#readme"
Changelog = "https://github.com/usestapel/stapel-mailtrap/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-mailtrap/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_mailtrap" = "."}
packages = [
    "stapel_mailtrap",
    "stapel_mailtrap.migrations",
    "stapel_mailtrap.management",
    "stapel_mailtrap.management.commands",
]

[tool.setuptools.package-data]
stapel_mailtrap = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
